# libwbxml

./: .travis.yml  AUTHORS  BUGS  CMakeLists.txt  COPYING  CTestConfig.cmake  ChangeLog  INSTALL  MANIFEST  Makefile.am  Makefile.statictools  NEWS  README  RELEASE  References  THANKS  TODO  bootstrap  build_travis.sh  config.h.cmake  configure.in  convert2git.sh  doxygen.h  libwbxml2.pc.cmake  libwbxml2.pc.in  svn-commit.tmp  wbxml2.spec.in
.github/workflows/: cmake.yml
cmake/: CMakeLists.txt  libwbxml2-config.cmake.in
cmake/modules/: AddDocumentation.cmake  Compiler.cmake  FindBONOBO2.cmake  FindBONOBOACTIVATION2.cmake  FindBlueZ.cmake  FindCheck.cmake  FindEBook1.0.cmake  FindEBook1.2.cmake  FindECal1.0.cmake  FindECal1.2.cmake  FindEDataBook1.0.cmake  FindEDataBook1.2.cmake  FindEDataCal1.0.cmake  FindEDataCal1.2.cmake  FindEDataServer1.0.cmake  FindEDataServer1.2.cmake  FindEPackage.cmake  FindEvolutionDataServer1.0.cmake  FindEvolutionDataServer1.2.cmake  FindExpat.cmake  FindGConf2.cmake  FindGLIB2.cmake  FindGMODULE2.cmake  FindGNOKII.cmake  FindGNUTLS.cmake  FindGTHREAD2.cmake  FindGnomeVfs2.cmake  FindIconv.cmake  FindKDEPIM3.cmake  FindLibDbus.cmake  FindLibDbusGlib.cmake  FindLibExslt.cmake  FindLibGCrypt.cmake  FindLibGSSAPIV2.cmake  FindLibGcal.cmake  FindLibGlade.cmake  FindLibGnome2.cmake  FindLibLdap.cmake  FindLibMozLdap.cmake  FindLibNeon.cmake  (+19 more)
doxygen/: doxygen.conf
expat/: expat_config.h
macosx/libwbxml.xcode/: project.pbxproj
macosx/libwbxml.xcodeproj/: project.pbxproj
src/: CMakeLists.txt  Makefile.am  wbxml.h  wbxml_base64.c  wbxml_base64.h  wbxml_buffers.c  wbxml_buffers.h  wbxml_charset.c  wbxml_charset.h  wbxml_config.h.cmake  wbxml_config_internals.h.cmake  wbxml_conv.c  wbxml_conv.h  wbxml_defines.h  wbxml_elt.c  wbxml_elt.h  wbxml_encoder.c  wbxml_encoder.h  wbxml_errors.c  wbxml_errors.h  wbxml_handlers.h  wbxml_internals.h  wbxml_lists.c  wbxml_lists.h  wbxml_log.c  wbxml_log.h  wbxml_mem.c  wbxml_mem.h  wbxml_parser.c  wbxml_parser.h  wbxml_tables.c  wbxml_tables.h  wbxml_tree.c  wbxml_tree.h  wbxml_tree_clb_wbxml.c  wbxml_tree_clb_wbxml.h  wbxml_tree_clb_xml.c  wbxml_tree_clb_xml.h  wbxml_wrap_syncml.c  wbxml_wrap_syncml.h
symbian/: LIBWBXML_WINS.DEF  bld.inf  libwbxml.mmp  libwbxmldll.cpp  wbxml2xml.mmp  xml2wbxml.mmp
test/: test_parser.c
test/api/: CMakeLists.txt  api_test.h  test_wbxml_base64.c  test_wbxml_buffers.c  test_wbxml_charset.c  test_wbxml_conv.c  test_wbxml_encoder_internals.c  test_wbxml_errors.c  test_wbxml_lists.c  test_wbxml_parser_internals.c
test/fuzz/: CMakeLists.txt  SIGABRT.PC.fffff7db0a10.STACK.0.CODE.-6.ADDR.0.INSTR.cmn_w0_0x1_lsl_12.2024-03-07.035819.705486.fuzz  SIGSEGV.PC.aaaaaaae3998.STACK.0.CODE.1.ADDR.8.INSTR.ldrb_w8_x8_8.2024-03-07.035825.707512.fuzz  SIGSEGV.PC.aaaaaaae39ac.STACK.0.CODE.1.ADDR.8.INSTR.ldrb_w20_x21_8.2024-03-11.003303.27182.fuzz
test/tools/: CMakeLists.txt  launchTests.sh  testsuite.xml
test/tools/activesync/: activesync-001-settings_device_information.xml  activesync-003-settings_device_password.xml  activesync-004-settings_oof.xml  activesync-010-provision-eas.xml  activesync-012-provision-eas.xml  activesync-020-folder_sync_initial_request.xml  activesync-030-sendmail-request.xml  activesync-040-search-response.xml
test/tools/airsync/: airsync-001.xml  airsync-002-search_query_for_exchange.xml  airsync-003-search_response_from_exchange.xml  airsync-004-binary_byte_array.xml
test/tools/ddf/: syncml_with_ddf-001.xml
test/tools/emn/: emn-004.xml  emn-005.xml  emn-006.xml  emn-008.xml  emn-010.xml  emn-012.xml  emn-014.xml  emn-015.xml  emn-017.xml
test/tools/syncml/: syncml-001.xml  syncml-006.xml  syncml-007.xml  syncml-010.xml
test/tools/wv/: wv-007.xml  wv-009.xml  wv-010.xml  wv-014.xml  wv-018.xml  wv-020.xml  wv-021.xml  wv-022.xml  wv-024.xml  wv-025.xml  wv-028.xml  wv-030.xml  wv-038.xml  wv-040.xml  wv-044.xml  wv-046.xml  wv-048.xml  wv-050.xml  wv-051.xml  wv-052.xml  wv-056.xml  wv-061.xml  wv-066.xml  wv-067.xml  wv-069.xml  wv-073.xml  wv-074.xml  wv-076.xml  wv-078.xml  wv-082.xml  wv-089.xml  wv-092.xml  wv-093.xml  wv-094.xml  wv-096.xml  wv-098.xml  wv-099.xml  wv-100.xml  wv-107-datetime.xml  wv-109-datetime.xml  (+3 more)
tests/: CMakeLists.txt  launchTests.sh  normalize_xml.pl
tests/activesync/: activesync-002-settings_user_information.xml  activesync-005-settings_status.xml  activesync-011-provision-wap.xml  activesync-021-folder_sync_initial_response.xml  activesync-031-sendmail-request.xml  activesync-032-formatted-base64.xml
tests/airsync/: airsync-001.xml  airsync-003-search_response_from_exchange.xml
tests/ddf/: dm_devdetail-v1_2.ddf  dm_devinfo-v1_2.ddf  dm_dmacc-v1_2.ddf  ds_mo-v1_0.ddf  mo_oma_imps-V1_3.ddf
tests/emn/: emn-002.xml  emn-003.xml  emn-007.xml  emn-009.xml  emn-011.xml  emn-013.xml  emn-016.xml
tests/ota/: ota-003.xml
tests/si/: si-001.xml
tests/syncml/: syncml-002.xml  syncml-003.xml  syncml-004.xml  syncml-005.xml  syncml-008.xml  syncml-009.xml  syncml-012.xml  syncml-013.xml  syncml-014.xml
tests/wv/: wv-001.xml  wv-002.xml  wv-003.xml  wv-004.xml  wv-005.xml  wv-006.xml  wv-011.xml  wv-012.xml  wv-013.xml  wv-015.xml  wv-016.xml  wv-017.xml  wv-019.xml  wv-021.xml  wv-022.xml  wv-023.xml  wv-024.xml  wv-026.xml  wv-032.xml  wv-033.xml  wv-034.xml  wv-036.xml  wv-037.xml  wv-042.xml  wv-043.xml  wv-045.xml  wv-047.xml  wv-049.xml  wv-054.xml  wv-057.xml  wv-058.xml  wv-060.xml  wv-062.xml  wv-064.xml  wv-068.xml  wv-070.xml  wv-071.xml  wv-072.xml  wv-077.xml  wv-079.xml  (+18 more)
tests_api/: CMakeLists.txt  api_test.c  test_wbxml_lists.c
tools/: CMakeLists.txt  Makefile.am  attgetopt.c  config.h.cmake  getopt.h  wbxml2xml_tool.c  xml2wbxml_tool.c
win32/: libwbxml.dsw
win32/leaktrack/: COPYING.txt  leaktrack.h  leaktrack.lib  lt_log.h
win32/libwbxml2/: libwbxml2.dsp
win32/test_parser/: test_parser.dsp
win32/wbxml2xml/: wbxml2xml.dsp
win32/xml2wbxml/: xml2wbxml.dsp
