dnl  Process this file with autoconf to produce a configure script.
AC_INIT(src/wbxml.h)
AM_INIT_AUTOMAKE(wbxml2, 0.9.3)
AM_CONFIG_HEADER(config.h)


dnl Define common variables
VERSION="0.9.3"
AC_SUBST(VERSION)
RELEASE="1"
AC_SUBST(RELEASE)

dnl Checks for programs.
AC_PROG_CXX
AC_PROG_AWK
AC_PROG_CC
AC_PROG_CPP
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET

dnl library support
dnl AM_PROG_LIBTOOL
AC_PROG_LIBTOOL

dnl Checks for libraries.
dnl Replace `main' with a function in -lnsl:
AC_CHECK_LIB(nsl, main)
dnl Replace `main' with a function in -lpopt:
AC_CHECK_LIB(popt, main)
dnl Replace `main' with a function in -lz:
AC_CHECK_LIB(z, main)
dnl Replace `main' with a function in -lexpat:
AC_CHECK_LIB(expat, main)

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(limits.h)
AC_CHECK_HEADERS(expat.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T

dnl Checks for library functions.
AC_FUNC_MEMCMP
AC_FUNC_VPRINTF

AC_OUTPUT(Makefile wbxml2.spec src/Makefile tools/Makefile libwbxml2.pc)
